Fixed line-spacing issue for code samples.
Underscores were being cut off by subsequent lines in code samples. This made
dunder methods hard to display.

--- a/slides/theme/sixty_north.css
+++ b/slides/theme/sixty_north.css
@@ -176,6 +176,7 @@ pre.src {
 
 code {
     font-family: "Inconsolata", sans-serif;
+    line-height: 1.4em;
 }
 
 .reveal .text_cell {
